--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <ins style="width: 300px;height:250px" data-width="300" data-height="250" class="oce66886b38" data-domain="//poqc4.sbs" data-affquery="/7eb765a95d5a7d1304be/ce66886b38/?placementName=default"><script src="//poqc4.sbs/js/responsive.js" async></script></ins>
   <meta charset="UTF-8" />
   <title>Multi_Tools & Games</title>
 
@@ -32,8 +33,8 @@
   </div>
 
   <script>
-    const ad1 = "https://otieu.com/4/9483094";
-    const ad2 = "https://obqj2.com/4/9524231";
+    const ad1 = "https://poqc4.sbs/c254981de9b974e78e22/698ccf1b29/?placementName=default";
+    const ad2 = "https://poqc4.sbs/c254981de9b974e78e22/eef6e84a68/?placementName=default";
     const storageKey = "visitCounter";
     const resetKey = "resetTimestamp";
     const now = Date.now();
