--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <div id="landing-content">
     <h1>🎉 Welcome to Our Special Deal!</h1>
     <p>This is the main landing content. You’re now seeing the real page after visiting 3 times.</p>
-    <a href="https://obese-pin.com/b-3DVM0jP.3SpKv/bxmpVFJJZCDa0z2cNADlk/3/M/DeM-3ILSTyYw0/O/TocDwvMDzwgG" style="padding: 10px 20px; background: #007bff; color: white; border-radius: 6px;">Claim Your Offer</a>
+    <a href="https://poqc4.sbs/c254981de9b974e78e22/698ccf1b29/?placementName=default" style="padding: 10px 20px; background: #007bff; color: white; border-radius: 6px;">Claim Your Offer</a>
   </div>
 
   <script>
-    const ad1 = "https://poqc4.sbs/c254981de9b974e78e22/698ccf1b29/?placementName=default";
+    const ad1 = "https://obese-pin.com/Ni7AUG";
     const ad2 = "https://poqc4.sbs/c254981de9b974e78e22/eef6e84a68/?placementName=default";
     const storageKey = "visitCounter";
     const resetKey = "resetTimestamp";
